services section completed

--- a/index.html
+++ b/index.html
@@ -494,6 +494,318 @@
                     </div>
                     <!-- End Service Item -->
                   </div>
+
+                  <!-- divider -->
+
+                  <div class="col-sm-6 col-lg-4">
+                    <!-- Start Service Item -->
+                    <div class="service-item">
+                      <div class="inner-content">
+                        <div class="thumb">
+                          <a href="class-details.html"
+                            ><span
+                              ><img
+                                src="assets/img/service/service5.jpg"
+                                alt="Image" /></span
+                          ></a>
+                        </div>
+                        <div class="content">
+                          <h4 class="class-time">Group Training</h4>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Service Item -->
+                  </div>
+
+                  <!-- divider -->
+
+                  <!-- divider -->
+
+                  <div class="col-sm-6 col-lg-4">
+                    <!-- Start Service Item -->
+                    <div class="service-item">
+                      <div class="inner-content">
+                        <div class="thumb">
+                          <a href="class-details.html"
+                            ><span
+                              ><img
+                                src="assets/img/service/service6.jpg"
+                                alt="Image" /></span
+                          ></a>
+                        </div>
+                        <div class="content">
+                          <h4 class="class-time">Yoga</h4>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Service Item -->
+                  </div>
+
+                  <!-- divider -->
+
+                  <!-- divider -->
+
+                  <div class="col-sm-6 col-lg-4">
+                    <!-- Start Service Item -->
+                    <div class="service-item">
+                      <div class="inner-content">
+                        <div class="thumb">
+                          <a href="class-details.html"
+                            ><span
+                              ><img
+                                src="assets/img/service/service7.jpg"
+                                alt="Image" /></span
+                          ></a>
+                        </div>
+                        <div class="content">
+                          <h4 class="class-time">Strength Machine</h4>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Service Item -->
+                  </div>
+
+                  <!-- divider -->
+
+                  <!-- divider -->
+
+                  <div class="col-sm-6 col-lg-4">
+                    <!-- Start Service Item -->
+                    <div class="service-item">
+                      <div class="inner-content">
+                        <div class="thumb">
+                          <a href="class-details.html"
+                            ><span
+                              ><img
+                                src="assets/img/service/service8.jpg"
+                                alt="Image" /></span
+                          ></a>
+                        </div>
+                        <div class="content">
+                          <h4 class="class-time">Aerobics</h4>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Service Item -->
+                  </div>
+
+                  <!-- divider -->
+
+                  <!-- divider -->
+
+                  <div class="col-sm-6 col-lg-4">
+                    <!-- Start Service Item -->
+                    <div class="service-item">
+                      <div class="inner-content">
+                        <div class="thumb">
+                          <a href="class-details.html"
+                            ><span
+                              ><img
+                                src="assets/img/service/service9.jpg"
+                                alt="Image" /></span
+                          ></a>
+                        </div>
+                        <div class="content">
+                          <h4 class="class-time">Animal Flow</h4>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Service Item -->
+                  </div>
+
+                  <!-- divider -->
+
+                  <!-- divider -->
+
+                  <div class="col-sm-6 col-lg-4">
+                    <!-- Start Service Item -->
+                    <div class="service-item">
+                      <div class="inner-content">
+                        <div class="thumb">
+                          <a href="class-details.html"
+                            ><span
+                              ><img
+                                src="assets/img/service/service10.jpg"
+                                alt="Image" /></span
+                          ></a>
+                        </div>
+                        <div class="content">
+                          <h4 class="class-time">Fat Loss & Muscle Gain</h4>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Service Item -->
+                  </div>
+
+                  <!-- divider -->
+
+                  <!-- divider -->
+
+                  <div class="col-sm-6 col-lg-4">
+                    <!-- Start Service Item -->
+                    <div class="service-item">
+                      <div class="inner-content">
+                        <div class="thumb">
+                          <a href="class-details.html"
+                            ><span
+                              ><img
+                                src="assets/img/service/service11.jpg"
+                                alt="Image" /></span
+                          ></a>
+                        </div>
+                        <div class="content">
+                          <h4 class="class-time">Personal Training</h4>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Service Item -->
+                  </div>
+
+                  <!-- divider -->
+
+                  <!-- divider -->
+
+                  <div class="col-sm-6 col-lg-4">
+                    <!-- Start Service Item -->
+                    <div class="service-item">
+                      <div class="inner-content">
+                        <div class="thumb">
+                          <a href="class-details.html"
+                            ><span
+                              ><img
+                                src="assets/img/service/service12.jpg"
+                                alt="Image" /></span
+                          ></a>
+                        </div>
+                        <div class="content">
+                          <h4 class="class-time">Resistance Training</h4>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Service Item -->
+                  </div>
+
+                  <!-- divider -->
+
+                  <!-- divider -->
+
+                  <div class="col-sm-6 col-lg-4">
+                    <!-- Start Service Item -->
+                    <div class="service-item">
+                      <div class="inner-content">
+                        <div class="thumb">
+                          <a href="class-details.html"
+                            ><span
+                              ><img
+                                src="assets/img/service/service13.jpg"
+                                alt="Image" /></span
+                          ></a>
+                        </div>
+                        <div class="content">
+                          <h4 class="class-time">HIIT</h4>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Service Item -->
+                  </div>
+
+                  <!-- divider -->
+
+                  <!-- divider -->
+
+                  <div class="col-sm-6 col-lg-4">
+                    <!-- Start Service Item -->
+                    <div class="service-item">
+                      <div class="inner-content">
+                        <div class="thumb">
+                          <a href="class-details.html"
+                            ><span
+                              ><img
+                                src="assets/img/service/service14.jpg"
+                                alt="Image" /></span
+                          ></a>
+                        </div>
+                        <div class="content">
+                          <h4 class="class-time">Physiotherapy</h4>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Service Item -->
+                  </div>
+
+                  <!-- divider -->
+
+                  <!-- divider -->
+
+                  <div class="col-sm-6 col-lg-4">
+                    <!-- Start Service Item -->
+                    <div class="service-item">
+                      <div class="inner-content">
+                        <div class="thumb">
+                          <a href="class-details.html"
+                            ><span
+                              ><img
+                                src="assets/img/service/service15.jpg"
+                                alt="Image" /></span
+                          ></a>
+                        </div>
+                        <div class="content">
+                          <h4 class="class-time">Diet Nutrition</h4>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Service Item -->
+                  </div>
+
+                  <!-- divider -->
+
+                  <!-- divider -->
+
+                  <div class="col-sm-6 col-lg-4">
+                    <!-- Start Service Item -->
+                    <div class="service-item">
+                      <div class="inner-content">
+                        <div class="thumb">
+                          <a href="class-details.html"
+                            ><span
+                              ><img
+                                src="assets/img/service/service16.jpg"
+                                alt="Image" /></span
+                          ></a>
+                        </div>
+                        <div class="content">
+                          <h4 class="class-time">Self Defence</h4>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Service Item -->
+                  </div>
+
+                  <!-- divider -->
+
+                  <!-- divider -->
+
+                  <div class="col-sm-6 col-lg-4">
+                    <!-- Start Service Item -->
+                    <div class="service-item">
+                      <div class="inner-content">
+                        <div class="thumb">
+                          <a href="class-details.html"
+                            ><span
+                              ><img
+                                src="assets/img/service/service17.jpg"
+                                alt="Image" /></span
+                          ></a>
+                        </div>
+                        <div class="content">
+                          <h4 class="class-time">Martial Arts</h4>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Service Item -->
+                  </div>
+
+                  <!-- divider -->
                 </div>
               </div>
             </div>
