--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Home 01 - Zymzoo - Gym & Fitness Centre Bootstrap 5 Template</title>
+    <title>Best women gym in mumbra - Minnat Vigour Gym</title>
 
     <!--== Favicon ==-->
     <link
@@ -93,7 +93,7 @@
                 <div class="header-navigation-area d-none d-xl-block">
                   <ul class="main-menu nav position-relative">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="#about">About</a></li>
 
                     <li><a href="contact.html">Contact</a></li>
                   </ul>
@@ -225,7 +225,10 @@
         <!--== End Features Area Wrapper ==-->
 
         <!--== Start About Area ==-->
-        <section class="about-area about-default-area position-relative">
+        <section
+          id="about"
+          class="about-area about-default-area position-relative"
+        >
           <div class="container">
             <div class="row">
               <div class="col-lg-7 col-xl-7 order-1 order-lg-0">
@@ -1416,7 +1419,7 @@
                     <img src="assets/img/photos/pricing1.png" alt="Image" />
                   </div>
                   <div class="pricing-amount">
-                    <h2>$1200</h2>
+                    <h2>₹1200</h2>
                     <h3>per month</h3>
                   </div>
 
@@ -1428,18 +1431,19 @@
                 </div>
                 <!--== End Pricing Item ==-->
               </div>
+
               <div class="col-md-6 my-3">
                 <!--== Start Pricing Item ==-->
                 <div class="pricing-item mb-sm-50">
                   <div class="pricing-title">
-                    <h5>Quarterly</h5>
+                    <h4>Quarterly</h4>
                   </div>
-                  <div class="pricing-thumb pricing-thumb-style2">
-                    <img src="assets/img/photos/pricing2.png" alt="Image" />
+                  <div class="pricing-thumb pricing-thumb-style1">
+                    <img src="assets/img/photos/pricing1.png" alt="Image" />
                   </div>
                   <div class="pricing-amount">
-                    <h2>$165</h2>
-                    <h3>per month</h3>
+                    <h2>₹3000</h2>
+                    <h3>per quarter</h3>
                   </div>
 
                   <div class="pricing-footer">
@@ -1450,18 +1454,19 @@
                 </div>
                 <!--== End Pricing Item ==-->
               </div>
+
               <div class="col-md-6 my-3">
                 <!--== Start Pricing Item ==-->
-                <div class="pricing-item">
+                <div class="pricing-item mb-sm-50">
                   <div class="pricing-title">
-                    <h5>GOLD</h5>
+                    <h4>Half Year</h4>
                   </div>
-                  <div class="pricing-thumb pricing-thumb-style3">
-                    <img src="assets/img/photos/pricing3.png" alt="Image" />
+                  <div class="pricing-thumb pricing-thumb-style1">
+                    <img src="assets/img/photos/pricing1.png" alt="Image" />
                   </div>
                   <div class="pricing-amount">
-                    <h2>$225</h2>
-                    <h3>per month</h3>
+                    <h2>₹5000</h2>
+                    <h3>per 6 months</h3>
                   </div>
 
                   <div class="pricing-footer">
@@ -1472,18 +1477,19 @@
                 </div>
                 <!--== End Pricing Item ==-->
               </div>
+
               <div class="col-md-6 my-3">
                 <!--== Start Pricing Item ==-->
-                <div class="pricing-item">
+                <div class="pricing-item mb-sm-50">
                   <div class="pricing-title">
-                    <h5>GOLD</h5>
+                    <h4>Yearly</h4>
                   </div>
-                  <div class="pricing-thumb pricing-thumb-style3">
-                    <img src="assets/img/photos/pricing3.png" alt="Image" />
+                  <div class="pricing-thumb pricing-thumb-style1">
+                    <img src="assets/img/photos/pricing1.png" alt="Image" />
                   </div>
                   <div class="pricing-amount">
-                    <h2>$225</h2>
-                    <h3>per month</h3>
+                    <h2>₹9000</h2>
+                    <h3>per year</h3>
                   </div>
 
                   <div class="pricing-footer">
@@ -1496,6 +1502,10 @@
               </div>
             </div>
           </div>
+
+          <h3 style="text-align: center; margin: 2rem auto">
+            Registration Fee: ₹100
+          </h3>
         </section>
         <!--== End Pricing Area Wrapper ==-->
       </main>
@@ -1519,7 +1529,7 @@
                       do eiusmod tempor incididunt ut labore et dolore magna
                     </p>
                     <div class="opening-time">
-                      <h4 class="title">Opening time</h4>
+                      <h4 class="title">Gym Timing</h4>
                       <ul>
                         <li>Monday - Saturday: 6:30am to 10:30pm</li>
                         <li>Sunday: Closed</li>
@@ -1618,11 +1628,8 @@
                 <div class="col-12">
                   <div class="widget-copyright text-center">
                     <p>
-                      <i class="fa fa-copyright"></i> 2021 Made with
-                      <i class="fa fa-heart"></i> by
-                      <a target="_blank" href="https://www.hasthemes.com"
-                        >HasThemes</a
-                      >
+                      <i class="fa fa-copyright"></i> Minnat Vigour Gym, All
+                      Rights Reserved
                     </p>
                   </div>
                 </div>
