showcase to client

--- a/index.html
+++ b/index.html
@@ -1397,7 +1397,7 @@
             <div class="row">
               <div class="col-lg-12">
                 <div class="section-title text-center">
-                  <h2 class="title">CHOOSE YOUR <span>MEMBERSHIP</span></h2>
+                  <h2 class="title">GYM <span>MEMBERSHIP</span> PLANS</h2>
                   <div class="desc">
                     <p>
                       Gym classes dolor sit amet, consectetur adipiscing elit,
@@ -1490,6 +1490,78 @@
                   <div class="pricing-amount">
                     <h2>₹9000</h2>
                     <h3>per year</h3>
+                  </div>
+
+                  <div class="pricing-footer">
+                    <div class="pricing-footer-inner">
+                      <a href="#/" class="btn btn-theme">JOIN TODAY</a>
+                    </div>
+                  </div>
+                </div>
+                <!--== End Pricing Item ==-->
+              </div>
+            </div>
+          </div>
+
+          <h3 style="text-align: center; margin: 2rem auto">
+            Registration Fee: ₹100
+          </h3>
+        </section>
+        <!--== End Pricing Area Wrapper ==-->
+
+        <!--== Start Pricing Area Wrapper ==-->
+        <section class="pricing-area pricing-default-area">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="section-title text-center">
+                  <h2 class="title">CHOOSE YOUR <span>MEMBERSHIP</span></h2>
+                  <div class="desc">
+                    <p>
+                      Gym classes dolor sit amet, consectetur adipiscing elit,
+                      sed do eiod tempor <br />didunt ut labore et dolore m et
+                      dolore magna aliqua minim niam
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6 my-3">
+                <!--== Start Pricing Item ==-->
+                <div class="pricing-item mb-sm-50">
+                  <div class="pricing-title">
+                    <h4>Monthly</h4>
+                  </div>
+                  <div class="pricing-thumb pricing-thumb-style1">
+                    <img src="assets/img/photos/pricing1.png" alt="Image" />
+                  </div>
+                  <div class="pricing-amount">
+                    <h2>₹1200</h2>
+                    <h3>per month</h3>
+                  </div>
+
+                  <div class="pricing-footer">
+                    <div class="pricing-footer-inner">
+                      <a href="#/" class="btn btn-theme">JOIN TODAY</a>
+                    </div>
+                  </div>
+                </div>
+                <!--== End Pricing Item ==-->
+              </div>
+
+              <div class="col-md-6 my-3">
+                <!--== Start Pricing Item ==-->
+                <div class="pricing-item mb-sm-50">
+                  <div class="pricing-title">
+                    <h4>Quarterly</h4>
+                  </div>
+                  <div class="pricing-thumb pricing-thumb-style1">
+                    <img src="assets/img/photos/pricing1.png" alt="Image" />
+                  </div>
+                  <div class="pricing-amount">
+                    <h2>₹3000</h2>
+                    <h3>per quarter</h3>
                   </div>
 
                   <div class="pricing-footer">
