--- a/index.html
+++ b/index.html
@@ -476,6 +476,26 @@
                     <!-- End Service Item -->
                   </div>
 
+                  <div class="col-sm-6 col-lg-4">
+                    <!-- Start Service Item -->
+                    <div class="service-item">
+                      <div class="inner-content">
+                        <div class="thumb">
+                          <a href="class-details.html"
+                            ><span
+                              ><img
+                                src="assets/img/service/service18.jpg"
+                                alt="Image" /></span
+                          ></a>
+                        </div>
+                        <div class="content">
+                          <h4 class="class-time">Kickboxing</h4>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Service Item -->
+                  </div>
+
                   <!-- divider -->
 
                   <div class="col-sm-6 col-lg-4">
@@ -1647,7 +1667,7 @@
                     <img src="assets/img/photos/pricing1.png" alt="Image" />
                   </div>
                   <div class="pricing-amount">
-                    <h2>₹1200</h2>
+                    <h2>₹800</h2>
                     <h3>per month</h3>
                   </div>
 
@@ -1664,14 +1684,14 @@
                 <!--== Start Pricing Item ==-->
                 <div class="pricing-item mb-sm-50">
                   <div class="pricing-title">
-                    <h4>Quarterly</h4>
+                    <h4>Quarterly / Yearly</h4>
                   </div>
                   <div class="pricing-thumb pricing-thumb-style1">
                     <img src="assets/img/photos/pricing1.png" alt="Image" />
                   </div>
                   <div class="pricing-amount">
-                    <h2>₹3000</h2>
-                    <h3>per quarter</h3>
+                    <h2>10% DISCOUNT</h2>
+                    <h3 style="visibility: hidden">per quarter</h3>
                   </div>
 
                   <div class="pricing-footer">
@@ -1743,8 +1763,9 @@
                       <div class="content">
                         <h4 class="title">Address</h4>
                         <p>
-                          252B, Central Street Main road Belix Tower, New York,
-                          USA
+                          Minnat Vigour Gym Maher Crest basement, Street, next
+                          to DCB Bank, opp. Sahil Hotel, Amrut Nagar, Mumbra,
+                          Maharashtra 400612
                         </p>
                       </div>
                     </div>
@@ -1756,7 +1777,7 @@
                         <h4 class="title">Phone</h4>
                         <ul>
                           <li>
-                            <a href="tel://09(123)456789">09 (123) 456 789</a>
+                            <a href="tel://+917039536321">+91 7039536321</a>
                           </li>
                         </ul>
                       </div>
