--- a/contact.html
+++ b/contact.html
@@ -156,8 +156,11 @@
                       </div>
                       <div class="content">
                         <p>
-                          252B, Central Street Main road<br />Belix Tower, New
-                          York, USA
+                          Minnat Vigour Gym Maher Crest <br />
+                          basement, Street, next to <br />
+                          DCB Bank, opp.<br />
+                          Sahil Hotel, Amrut Nagar,<br />
+                          Mumbra, Maharashtra 400612
                         </p>
                       </div>
                     </div>
@@ -170,8 +173,7 @@
                         />
                       </div>
                       <div class="content">
-                        <a href="tel://09(123)456789">09 (123) 456 789</a>
-                        <a href="tel://09(987)654321">09 (987) 654 321</a>
+                        <a href="tel://+917039536321">+91 7039536321</a>
                       </div>
                     </div>
                     <div class="contact-info-item">
@@ -333,8 +335,9 @@
                       <div class="content">
                         <h4 class="title">Address</h4>
                         <p>
-                          252B, Central Street Main road Belix Tower, New York,
-                          USA
+                          Minnat Vigour Gym Maher Crest basement, Street, next
+                          to DCB Bank, opp. Sahil Hotel, Amrut Nagar, Mumbra,
+                          Maharashtra 400612
                         </p>
                       </div>
                     </div>
