--- a/index.html
+++ b/index.html
@@ -388,6 +388,54 @@
         </section>
         <!--== End Features Area Wrapper ==-->
 
+        <!--== Start Team Area ==-->
+        <section class="team-area team-default-area">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-12">
+                <div
+                  class="section-title text-center"
+                  data-aos="fade-up"
+                  data-aos-duration="1000"
+                >
+                  <h2 class="title">A LITTLE ABOUT THE <span>FOUNDER</span></h2>
+                 
+                </div>
+              </div>
+            </div>
+            <div class="row" data-aos="fade-up" data-aos-duration="1100">
+              <div class="founder-container">
+                <div class="founder-image-container">
+                  <img src="/assets/img/blog/sumaiya.jpeg" width="350" alt="">
+                </div>
+                <div class="founder-content">
+                  <h3>Sumaiya Mehmood Shaikh</h3>
+                  <p>
+                    is founder and owner of Minnat Vigour Gym. She is genuinely passionate about fitness and Martial Arts. Her love and passion for Martial Arts has greatly shown in her achievements. 
+                    <br />
+                    <br />
+                    Sumaiya Shaikh is Internationally certified personal trainer 
+                  </p>
+
+                  <ul>
+                    <li>Black Belt in Taekwondo and Kickboxing</li>
+                    <li>International MMA Championship Belt holder</li>
+                    <li>Winner of Bodypower MMA Championship</li>
+                    <li>3 times National champion in Taekwondo and Kickboxing</li>
+                    <li>8 times State level Taekwondo Champion</li>
+                    <li>2 times DSO Gold Medalist in Taekwondo</li>
+                    <li>Best fighter Award holder</li>
+                    <li>Best Performance Award holder in Taekwondo and Kickboxing</li>
+                  </ul>
+
+                  <p>Further her advanced knowledge and professional manner has advantageously enabled her to achieve great result as a Trainer.
+                    Now She aims to revolutionize the fitness industry through the passion she has and serve the community with the best, to achieve their fitness goals.</p>
+                </div>
+              </div>
+          </div>
+        </section>
+        <!--== End Team Area ==-->
+
         <!--== Start Service Area ==-->
         <section class="service-area service-default-area">
           <div class="container">
@@ -1179,159 +1227,6 @@
           </div>
         </section>
         <!--== End Gallery Slider Area Wrapper ==-->
-
-        <!--== Start Team Area ==-->
-        <section class="team-area team-default-area">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-12">
-                <div
-                  class="section-title text-center"
-                  data-aos="fade-up"
-                  data-aos-duration="1000"
-                >
-                  <h2 class="title">PROFESSIONAL <span>INSTRUCTORS</span></h2>
-                  <div class="desc">
-                    <p>
-                      Gym classes dolor sit amet, consectetur adipiscing elit,
-                      sed do eiod tempor <br />didunt ut labore et dolore m et
-                      dolore magna aliqua minim niam
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="row" data-aos="fade-up" data-aos-duration="1100">
-              <div class="col-sm-6 col-lg-3">
-                <!-- Start Team Item -->
-                <div class="team-item mb-md-30">
-                  <div class="team-member">
-                    <div class="thumb">
-                      <a href="team-details.html"
-                        ><img src="assets/img/team/1.jpg" alt="Image"
-                      /></a>
-                    </div>
-                    <div class="content">
-                      <div class="member-info">
-                        <h4 class="name">
-                          <a href="team-details.html">Robert Cristopher</a>
-                        </h4>
-                        <h6 class="designation">Bodybuilding Trainer</h6>
-                        <div class="social-icons">
-                          <a href="#/"><i class="fa fa-facebook icon"></i></a>
-                          <a href="#/"><i class="fa fa-phone icon"></i></a>
-                          <a href="#/"><i class="fa fa-instagram icon"></i></a>
-                          <a href="#/"><i class="fa fa-twitter icon"></i></a>
-                        </div>
-                        <div class="team-footer">
-                          <a class="btn" href="team-details.html"
-                            >VIEW PROFILE</a
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- End Team Item -->
-              </div>
-              <div class="col-sm-6 col-lg-3">
-                <!-- Start Team Item -->
-                <div class="team-item mb-md-30">
-                  <div class="team-member">
-                    <div class="thumb">
-                      <a href="team-details.html"
-                        ><img src="assets/img/team/2.jpg" alt="Image"
-                      /></a>
-                    </div>
-                    <div class="content">
-                      <div class="member-info">
-                        <h4 class="name">
-                          <a href="team-details.html">Oliviea Williams</a>
-                        </h4>
-                        <h6 class="designation">Fitness Trainer</h6>
-                        <div class="social-icons">
-                          <a href="#/"><i class="fa fa-facebook icon"></i></a>
-                          <a href="#/"><i class="fa fa-phone icon"></i></a>
-                          <a href="#/"><i class="fa fa-instagram icon"></i></a>
-                          <a href="#/"><i class="fa fa-twitter icon"></i></a>
-                        </div>
-                        <div class="team-footer">
-                          <a class="btn" href="team-details.html"
-                            >VIEW PROFILE</a
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- End Team Item -->
-              </div>
-              <div class="col-sm-6 col-lg-3">
-                <!-- Start Team Item -->
-                <div class="team-item mb-xs-30">
-                  <div class="team-member">
-                    <div class="thumb">
-                      <a href="team-details.html"
-                        ><img src="assets/img/team/3.jpg" alt="Image"
-                      /></a>
-                    </div>
-                    <div class="content">
-                      <div class="member-info">
-                        <h4 class="name">
-                          <a href="team-details.html">Nikolus Smith</a>
-                        </h4>
-                        <h6 class="designation">Crossfit Trainer</h6>
-                        <div class="social-icons">
-                          <a href="#/"><i class="fa fa-facebook icon"></i></a>
-                          <a href="#/"><i class="fa fa-phone icon"></i></a>
-                          <a href="#/"><i class="fa fa-instagram icon"></i></a>
-                          <a href="#/"><i class="fa fa-twitter icon"></i></a>
-                        </div>
-                        <div class="team-footer">
-                          <a class="btn" href="team-details.html"
-                            >VIEW PROFILE</a
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- End Team Item -->
-              </div>
-              <div class="col-sm-6 col-lg-3">
-                <!-- Start Team Item -->
-                <div class="team-item">
-                  <div class="team-member">
-                    <div class="thumb">
-                      <a href="team-details.html"
-                        ><img src="assets/img/team/4.jpg" alt="Image"
-                      /></a>
-                    </div>
-                    <div class="content">
-                      <div class="member-info">
-                        <h4 class="name">
-                          <a href="team-details.html">Jenifer Parker</a>
-                        </h4>
-                        <h6 class="designation">Aerobics Instructor</h6>
-                        <div class="social-icons">
-                          <a href="#/"><i class="fa fa-facebook icon"></i></a>
-                          <a href="#/"><i class="fa fa-phone icon"></i></a>
-                          <a href="#/"><i class="fa fa-instagram icon"></i></a>
-                          <a href="#/"><i class="fa fa-twitter icon"></i></a>
-                        </div>
-                        <div class="team-footer">
-                          <a class="btn" href="#/">VIEW PROFILE</a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- End Team Item -->
-              </div>
-            </div>
-          </div>
-        </section>
-        <!--== End Team Area ==-->
 
         <!--== Start Testimonial Area ==-->
         <section
